[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Background/Logo.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/MainMenu.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Buttons/PlayNormal.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buttons/PlayHover.png" type="Texture" id=5]
[ext_resource path="res://Assets/Buttons/PlayPressed.png" type="Texture" id=6]
[ext_resource path="res://Assets/Buttons/CreditsPressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/Buttons/CreditsHover.png" type="Texture" id=8]
[ext_resource path="res://Assets/Buttons/CreditsNormal.png" type="Texture" id=9]
[ext_resource path="res://Assets/Buttons/TutorialHover.png" type="Texture" id=10]
[ext_resource path="res://Assets/Buttons/TutorialNormal.png" type="Texture" id=11]
[ext_resource path="res://Assets/Buttons/TutorialPressed.png" type="Texture" id=12]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
play_scene = "res://Levels/BabyFirst.tscn"
tutorial_scene = "res://Levels/Tutorial.tscn"
credits_scene = "res://UI/Credits.tscn"

[node name="Logo" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Play" type="TextureButton" parent="."]
margin_left = -282.0
margin_top = 225.0
margin_right = -26.0
margin_bottom = 369.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="TextureButton" parent="."]
margin_left = -282.0
margin_top = 405.0
margin_right = -26.0
margin_bottom = 549.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="."]
margin_left = 1037.0
margin_top = 405.0
margin_right = 1293.0
margin_bottom = 549.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -396.5
margin_top = 85.8481
margin_right = 396.5
margin_bottom = 156.848
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.968627, 0.368627, 1 )
text = "BLIP-BLOP TAKEOVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
